--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
@@ -18,6 +19,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.5.1"
+    "@svgr/webpack": "^6.5.1",
+    "parcel": "^2.8.2"
   }
 }
