navbar constructiong links from json

--- a/assets/data/nav_links/nav_apps.json
+++ b/assets/data/nav_links/nav_apps.json
@@ -1,1 +1,1 @@
-[]
+[{"dirTitle":"Apps","links":[{"id":"pagesappsindex","linkTitle":"Apps","linkHref":"/apps","directories":["apps"],"path":"pages/apps/index.js"}],"icon":false}]
