--- a/assets/data/nav_links/nav_projects.json
+++ b/assets/data/nav_links/nav_projects.json
@@ -1,1 +1,15 @@
-[]
+[
+  {
+    "dirTitle": "Projects",
+    "links": [
+      {
+        "id": "pagesprojectsindex",
+        "linkTitle": "Projects",
+        "linkHref": "/projects",
+        "directories": ["projects"],
+        "path": "pages/projects/index.js"
+      }
+    ],
+    "icon": false
+  }
+]
