add remaining navbar sub links, improve link dropdown list

--- a/assets/data/nav_links/nav_projects.json
+++ b/assets/data/nav_links/nav_projects.json
@@ -1,15 +1,1 @@
-[
-  {
-    "dirTitle": "Projects",
-    "links": [
-      {
-        "id": "pagesprojectsindex",
-        "linkTitle": "Projects",
-        "linkHref": "/projects",
-        "directories": ["projects"],
-        "path": "pages/projects/index.js"
-      }
-    ],
-    "icon": false
-  }
-]
+[{"dirTitle":"Projects","links":[{"id":"pagesprojectsindex","linkTitle":"Projects","linkHref":"/projects/index","directories":["projects"],"path":"pages/projects/index.js"}],"icon":false}]
