add content to the auto-page-navbar doc

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "predev": "node ./lib/read_file.js",
     "build": "next build",
+    "prebuild": "node ./lib/read_file.js",
     "start": "next start",
     "lint": "next lint"
   },
