--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "directory-tree": "^3.5.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
-    "gray-matter": "^4.0.3",
     "next": "13.1.1",
     "path": "^0.12.7",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^2.0.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
